// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compares multiple bundles > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 200,
  },
]
`;

exports[`compares multiple bundles > compare 1`] = `
[
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "app",
    "name": "app",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 110,
      },
    ],
    "newGzip": 24,
    "newSize": 110,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldGzip": 24,
    "oldSize": 100,
    "sizeDiff": 10,
    "status": "updated",
  },
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "lib",
    "name": "lib",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 180,
      },
    ],
    "newGzip": 24,
    "newSize": 180,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "oldGzip": 24,
    "oldSize": 200,
    "sizeDiff": -20,
    "status": "updated",
  },
]
`;

exports[`compares multiple bundles > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 110,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 110,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 180,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 180,
  },
]
`;

exports[`detects added bundle via config change > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`detects added bundle via config change > compare 1`] = `
[
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "app",
    "name": "app",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "newGzip": 24,
    "newSize": 100,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldGzip": 24,
    "oldSize": 100,
    "sizeDiff": 0,
    "status": "updated",
  },
  {
    "brotliDiff": 11,
    "gzipDiff": 24,
    "id": "lib",
    "name": "lib",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "newGzip": 24,
    "newSize": 200,
    "oldBrotli": 0,
    "oldFiles": [],
    "oldGzip": 0,
    "oldSize": 0,
    "sizeDiff": 200,
    "status": "added",
  },
]
`;

exports[`detects added bundle via config change > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 200,
  },
]
`;

exports[`detects added file between baseline and current > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;

exports[`detects added file between baseline and current > compare 1`] = `
[
  {
    "brotliDiff": 10,
    "gzipDiff": 23,
    "id": "app",
    "name": "app",
    "newBrotli": 21,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "newGzip": 47,
    "newSize": 80,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "oldGzip": 24,
    "oldSize": 50,
    "sizeDiff": 30,
    "status": "updated",
  },
]
`;

exports[`detects added file between baseline and current > current 1`] = `
[
  {
    "brotli": 21,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "gzip": 47,
    "id": "app",
    "size": 80,
  },
]
`;

exports[`detects removed bundle via config change > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 200,
  },
]
`;

exports[`detects removed bundle via config change > compare 1`] = `
[
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "app",
    "name": "app",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "newGzip": 24,
    "newSize": 100,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldGzip": 24,
    "oldSize": 100,
    "sizeDiff": 0,
    "status": "updated",
  },
  {
    "brotliDiff": -11,
    "gzipDiff": -24,
    "id": "lib",
    "name": "lib",
    "newBrotli": 0,
    "newFiles": [],
    "newGzip": 0,
    "newSize": 0,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "oldGzip": 24,
    "oldSize": 200,
    "sizeDiff": -200,
    "status": "removed",
  },
]
`;

exports[`detects removed bundle via config change > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`detects removed file between baseline and current > base 1`] = `
[
  {
    "brotli": 21,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "gzip": 47,
    "id": "app",
    "size": 80,
  },
]
`;

exports[`detects removed file between baseline and current > compare 1`] = `
[
  {
    "brotliDiff": -10,
    "gzipDiff": -23,
    "id": "app",
    "name": "app",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "newGzip": 24,
    "newSize": 50,
    "oldBrotli": 21,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "oldGzip": 47,
    "oldSize": 80,
    "sizeDiff": -30,
    "status": "updated",
  },
]
`;

exports[`detects removed file between baseline and current > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;

exports[`handles empty bundles gracefully > base 1`] = `
[
  {
    "brotli": 0,
    "bundle": "empty",
    "files": [],
    "gzip": 0,
    "id": "empty",
    "size": 0,
  },
]
`;

exports[`handles empty bundles gracefully > compare 1`] = `
[
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "empty",
    "name": "empty",
    "newBrotli": 0,
    "newFiles": [],
    "newGzip": 0,
    "newSize": 0,
    "oldBrotli": 0,
    "oldFiles": [],
    "oldGzip": 0,
    "oldSize": 0,
    "sizeDiff": 0,
    "status": "updated",
  },
]
`;

exports[`handles empty bundles gracefully > current 1`] = `
[
  {
    "brotli": 0,
    "bundle": "empty",
    "files": [],
    "gzip": 0,
    "id": "empty",
    "size": 0,
  },
]
`;

exports[`reports no differences for identical bundles > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`reports no differences for identical bundles > compare 1`] = `
[
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "app",
    "name": "app",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "newGzip": 24,
    "newSize": 100,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldGzip": 24,
    "oldSize": 100,
    "sizeDiff": 0,
    "status": "updated",
  },
]
`;

exports[`reports no differences for identical bundles > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`reports size increase when file grows > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`reports size increase when file grows > compare 1`] = `
[
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "app",
    "name": "app",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 160,
      },
    ],
    "newGzip": 24,
    "newSize": 160,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldGzip": 24,
    "oldSize": 100,
    "sizeDiff": 60,
    "status": "updated",
  },
]
`;

exports[`reports size increase when file grows > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 160,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 160,
  },
]
`;

exports[`respects exclude patterns in config > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;

exports[`respects exclude patterns in config > compare 1`] = `
[
  {
    "brotliDiff": 0,
    "gzipDiff": 0,
    "id": "app",
    "name": "app",
    "newBrotli": 11,
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "newGzip": 24,
    "newSize": 50,
    "oldBrotli": 11,
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "oldGzip": 24,
    "oldSize": 50,
    "sizeDiff": 0,
    "status": "updated",
  },
]
`;

exports[`respects exclude patterns in config > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;
